panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__typeof__test_typeof_of_function_is_decl.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typeof/test_typeof_of_function_is_decl.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typeof/test_typeof_of_function_is_decl.c"
   (declaration puts~0 `typeof(`fn(∅: ptr<char const>) -> int`)` ∅)
   (declaration puts~0 `typeof((name puts~0 `typeof(`fn(∅: ptr<char const>) -> int`)`))` ∅)
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (declaration puts~4 `typeof((name puts~0 `typeof((name puts~0 `typeof(`fn(∅: ptr<char const>) -> int`)`))`))` ∅)
         (declaration puts~4 `typeof(`fn(∅: ptr<char const>) -> int`)` ∅)
         (expression
            (call (name puts~4 `typeof(`fn(∅: ptr<char const>) -> int`)`)
               (string "it works"))))))

----- stderr -----
