panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__typeof__test_typeof_ty_simple.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typeof/test_typeof_ty_simple.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typeof/test_typeof_ty_simple.c"
   (function-definition
      main~0 `fn() -> typeof(`int`)`
      (compound-statement
         (declaration x~2 `typeof(`ptr<int const>`)` nullptr)
         (declaration xs~3 `typeof(`array<typeof(`int const`); 5>`)` (braced ∅))
         (expression (assign (name x~2 `typeof(`ptr<int const>`)`) (name xs~3 `typeof(`array<typeof(`int const`); 5>`)`)))
         (declaration ys~4 `typeof(`array<int const; 5>`)` (braced ∅))
         (expression (cast `ptr<typeof(`int`)>` nullptr))
         (return (add (subscript (name x~2 `typeof(`ptr<int const>`)`) 0) (subscript (name ys~4 `typeof(`array<int const; 5>`)`) (subtract (lengthof (name ys~4 `typeof(`array<int const; 5>`)`)) 1)))))))

----- stderr -----
