panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__typeof__test_typeof_unqual_expr_simple.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typeof/test_typeof_unqual_expr_simple.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typeof/test_typeof_unqual_expr_simple.c"
   (declaration puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration x~3 `int const` 42)
         (declaration y~4 `typeof_unqual((name x~3 `int const`))` 27)
         (expression (assign (name y~4 `typeof_unqual((name x~3 `int const`))`) 5))
         (declaration p~5 `typeof_unqual((addressof (name x~3 `int const`)))` nullptr)
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (generic
                  (name p~5 `typeof_unqual((addressof (name x~3 `int const`)))`)
                  (assoc `ptr<int const>` (string "it works")))))
         (return (name y~4 `typeof_unqual((name x~3 `int const`))`)))))

----- stderr -----
